unpackaged/main/default/objects/Attribute_Relationship__c/Attribute_Relationship__c.object-meta.xml
<CustomObject>
    <description>Relationship object to link an Attribute with another record in Salesforce.</description>
    <label>Attribute Relationship</label>
    <nameField>
        <displayFormat>ATREL-{000}</displayFormat>
        <label>Attribute Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attribute Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>