unpackaged/main/default/objects/Attribute_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account record to this Attribute.</description>
    <inlineHelpText>Related Account record to this Attribute.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Attribute Relationships</relationshipLabel>
    <relationshipName>Attribute_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>