unpackaged/main/default/objects/Attribute_Relationship__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Attribute related to this record.</description>
    <inlineHelpText>Attribute related to this record.</inlineHelpText>
    <label>Attribute</label>
    <referenceTo>Attribute__c</referenceTo>
    <relationshipLabel>Attribute Relationships</relationshipLabel>
    <relationshipName>Attribute_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>