unpackaged/main/default/objects/Attribute_Relationship__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the related Attribute.</description>
    <inlineHelpText>Category of the related Attribute.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Attribute_Category</valueSetName>
    </valueSet>
</CustomField>